# koutil

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_000001_000002.html  dir_000001_000004.html  dir_000002_000005.html  dir_000003_000005.html  dir_000004_000006.html  dir_25a73089a75bcbb75c7fa900cc5893bd.html  dir_25a73089a75bcbb75c7fa900cc5893bd.js  dir_25a73089a75bcbb75c7fa900cc5893bd_dep.map  dir_25a73089a75bcbb75c7fa900cc5893bd_dep.md5  dir_2cdf039c962777334dedf5fe7f8f059b.html  dir_2cdf039c962777334dedf5fe7f8f059b.js  dir_2cdf039c962777334dedf5fe7f8f059b_dep.map  dir_2cdf039c962777334dedf5fe7f8f059b_dep.md5  dir_4ad071642eec2dadafafe5aa1b3d57a9.html  dir_4ad071642eec2dadafafe5aa1b3d57a9.js  dir_8b1c092daece89a38fbff838bd9f6f66.html  dir_8b1c092daece89a38fbff838bd9f6f66.js  dir_8b1c092daece89a38fbff838bd9f6f66_dep.map  dir_8b1c092daece89a38fbff838bd9f6f66_dep.md5  dir_9dacd1b6f1dbade732d7fe5c52563b80.html  dir_9dacd1b6f1dbade732d7fe5c52563b80.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_d86e4bb1a7191b6cd17359eb2871f472.html  dir_d86e4bb1a7191b6cd17359eb2871f472.js  (+149 more)
cmake/: bootstrap.cmake  doctest.cmake
examples/: CMakeLists.txt
examples/argparser/: main.cpp
examples/colors/: main.cpp
examples/commands/: main.cpp
examples/hash_array/: main.cpp
examples/styles/: main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+94 more)
(+426 files in other folders)
